# glenn20-ci-test

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: _build.yaml  _check.yaml  _ci_tests.yaml  _publish.yaml  _test.yaml  _test_ci.yaml  build.yaml  ci-publish.yaml  ci-release.yaml  ci-tests.yaml  publish.yaml
src/ci_test/: __init__.py
src/glenn20_ci_test/: __init__.py
tests/: test_hello.py
