[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "glenn20-ci-test"
description = "Test repo for CI github actions."
readme = "README.md"
authors = [{name = "glenn20", email = "6965319+glenn20@users.noreply.github.com"}]
urls = {Homepage = "https://github.com/glenn20/glenn20-ci-test"}
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "rich>=10.12.0",  # For pretty printing: rich.print()
]
dynamic = ["version"]

[project.scripts]
hello = "glenn20_ci_test:hello"

[tool.hatch]
build.targets.wheel.packages = ["src/glenn20_ci_test"]
build.hooks.vcs.version-file = "src/glenn20_ci_test/_version.py"
version.source = "vcs"  # Get the version from git, eg: 0.0.6.dev0+g1234567
version.raw-options.local_scheme = "no-local-version"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",  # For running tests: pytest, tox
    "pytest-cov>=3.0.0",
    "tox>=4.21",
    "tox-uv>=0.3.0",  # uv support for tox
    "mypy>=0.910",  # For code type checks: uv run mypy src
    "ruff>=0.6.7",  # For linting: uv run ruff format --check src
    "keyring>=25",  # For uv publish --keyring-provider=subprocess
    "hatchling>=1.12.0",  # Used for building package
    "hatch-vcs>=0.3.0",  # Used for building and updating _version.py
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "typings"

[tool.ruff]
exclude = ["_version.py"]
lint.extend-select = ["I"]  # Enable ruffs isort rules (for compat with vscode ruff)

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = ["--cov"]

[tool.coverage]
run.source = ["src"]
run.omit = ["_version.py"]
report.skip_covered = true
append = true
